--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Document</title>
   </head>
+
   <body>
-    <table id="pixelCanvas"></table>
+    <main>
+      <header>
+        <h1>Pixel Art Maker</h1>
+      </header>
+      <form id="sizePicker">
+        Grid Height:
+        <input type="number" id="inputHeight" name="height" min="1" value="1" />
+        Grid Width:
+        <input type="number" id="inputWidth" name="width" min="1" value="1" />
+        <input type="submit" />
+      </form>
+
+      <table id="pixelCanvas"></table>
+    </main>
     <script src="/app.js"></script>
   </body>
 </html>
