--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <input type="number" id="inputWidth" name="width" min="1" value="1" />
         <input type="submit" />
       </form>
-
+      <h2>Pick A Color</h2>
+      <input type="color" id="colorPicker" />
       <table id="pixelCanvas"></table>
     </main>
     <script src="/app.js"></script>
