selecting color piker value

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="submit" />
       </form>
       <h2>Pick A Color</h2>
-      <input type="color" id="colorPicker" />
+      <input type="color" id="colorPicker" value="#e66465" />
       <table id="pixelCanvas"></table>
     </main>
     <script src="/app.js"></script>
