--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
 
@@ -39,6 +39,6 @@
 
       <table id="pixelCanvas"></table>
     </main>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
